<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/jobs"
            android:title="@string/menu_jobs" />
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/truck"
            android:title="@string/menu_vehicle" />
        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/receipt"
            android:title="@string/menu_receipts" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about"
                android:onClick="onOptionsItemSelected"
                />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout"
                android:onClick="onOptionsItemSelected"
                />
        </menu>
    </item>

</menu>


