<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aquarian.drivers.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_jobs"
        android:name="com.aquarian.drivers.ui.jobs.JobsFragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/jobs_fragment" />

    <fragment
        android:id="@+id/nav_vehicle"
        android:name="com.aquarian.drivers.ui.vehicle.VehicleFragment"
        android:label="@string/menu_vehicle"
        tools:layout="@layout/fragment_vehicle" />

    <fragment
        android:id="@+id/nav_receipts"
        android:name="com.aquarian.drivers.ui.receipts.ReceiptsFragment"
        android:label="@string/menu_receipts"
        tools:layout="@layout/fragment_receipts" />

</navigation>